--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<h6>In Progress</h6>
-<h5>In Progress</h5>
-<h4>In Progress</h4>
-<h3>In Progress</h3>
-<h2>In Progress</h2>
-<h1>In Progress</h1>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.d14a8826.js"></script><link href="/static/css/main.4b6b9ee3.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
